Implement DRAFT booking hold functionality with expiry
- Add DRAFT status to BookingStatus with blocksAvailability() for CONFIRMED and DRAFT
- Add expiresAt field to Booking entity and BookingResponse DTO
- Add Flyway migration V3 for expires_at column
- Create HoldRequest and ConfirmRequest DTOs
- Add POST /api/bookings/hold endpoint to create DRAFT bookings with 15min expiry
- Add POST /api/bookings/{id}/confirm endpoint to confirm DRAFT bookings
- Add BookingExpirationScheduler with @Scheduled to cancel expired DRAFT bookings every minute
- Update AvailabilityService to use findActiveBookings method considering DRAFT expiry
- Add comprehensive test coverage for hold creation, expiry, confirmation, and scheduler
- Fix all AvailabilityServiceTest stubbing issues with proper Mockito matchers
- All 36 tests passing with 0 failures, 0 errors, 0 skipped