@@ -4,9 +4,9 @@ import ee.futu.booking.domain.booking.Booking;
 import ee.futu.booking.domain.booking.BookingRepository;
 import ee.futu.booking.domain.booking.BookingStatus;
 import ee.futu.booking.domain.room.Room;
-import ee.futu.booking.domain.slot.SlotTemplate;
 import ee.futu.booking.web.SlotStatus;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -14,9 +14,10 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -37,7 +38,6 @@ class AvailabilityServiceTest {
     private LocalDate fridayDate;
     private LocalDate saturdayDate;
     private Room room;
-    private SlotTemplate slotTemplate;
 
     @BeforeEach
     void setUp() {
@@ -48,24 +48,14 @@ class AvailabilityServiceTest {
 
         room = new Room();
         room.setId(roomId);
-        room.setName("Test Room");
-        room.setActive(true);
-
-        slotTemplate = new SlotTemplate();
-        slotTemplate.setId(1L);
-        slotTemplate.setWeekday((short) 1); // Monday
-        slotTemplate.setSlotIndex((short) 1);
-        slotTemplate.setStartTime(LocalTime.of(11, 0));
-        slotTemplate.setEndTime(LocalTime.of(13, 0));
-        slotTemplate.setPriceCents(2500);
-        slotTemplate.setActive(true);
     }
 
     @Test
     void getAvailability_monday_returns2SlotsWith210Price() {
         // Given - no bookings for Monday
-        when(bookingRepository.findByRoomIdAndBookingDateAndStatusIn(
-                eq(roomId), eq(mondayDate), any()))
+        when(bookingRepository.findActiveBookings(
+                eq(roomId), eq(mondayDate), eq(BookingStatus.CONFIRMED), eq(BookingStatus.DRAFT),
+                any(LocalDateTime.class)))
                 .thenReturn(Collections.emptyList());
 
         // When
@@ -92,8 +82,9 @@ class AvailabilityServiceTest {
     @Test
     void getAvailability_saturday_returns4SlotsWith260Price() {
         // Given - no bookings for Saturday
-        when(bookingRepository.findByRoomIdAndBookingDateAndStatusIn(
-                eq(roomId), eq(saturdayDate), any()))
+        when(bookingRepository.findActiveBookings(
+                eq(roomId), eq(saturdayDate), eq(BookingStatus.CONFIRMED), eq(BookingStatus.DRAFT),
+                any(LocalDateTime.class)))
                 .thenReturn(Collections.emptyList());
 
         // When
@@ -124,8 +115,9 @@ class AvailabilityServiceTest {
     @Test
     void getAvailability_friday_returns2SlotsWith260Price() {
         // Given - no bookings for Friday
-        when(bookingRepository.findByRoomIdAndBookingDateAndStatusIn(
-                eq(roomId), eq(fridayDate), any()))
+        when(bookingRepository.findActiveBookings(
+                eq(roomId), eq(fridayDate), eq(BookingStatus.CONFIRMED), eq(BookingStatus.DRAFT),
+                any(LocalDateTime.class)))
                 .thenReturn(Collections.emptyList());
 
         // When
@@ -161,17 +153,20 @@ class AvailabilityServiceTest {
         booking.setStatus(BookingStatus.CONFIRMED);
         booking.setTotalPriceCents(21000);
 
-        when(bookingRepository.findByRoomIdAndBookingDateAndStatusIn(
-                eq(roomId), eq(mondayDate), eq(Arrays.asList(BookingStatus.CONFIRMED))))
-                .thenReturn(Arrays.asList(booking));
+        when(bookingRepository.findActiveBookings(
+                eq(roomId), eq(mondayDate), eq(BookingStatus.CONFIRMED), eq(BookingStatus.DRAFT),
+                any(LocalDateTime.class)))
+                .thenReturn(List.of(booking));
 
         // When
         var response = availabilityService.getAvailability(roomId, mondayDate);
 
-        // Then - only slot #1 should be unavailable, slot #2 should be available (cleanup respected)
+        // Then - only slot #1 should be unavailable, slot #2 should be available
+        // (cleanup respected)
         assertThat(response.getSlots()).hasSize(2);
         assertThat(response.getSlots().get(0).getStatus()).isEqualTo(SlotStatus.UNAVAILABLE); // 16:00-18:30
-        assertThat(response.getSlots().get(1).getStatus()).isEqualTo(SlotStatus.AVAILABLE);     // 19:00-21:30 (cleanup respected)
+        assertThat(response.getSlots().get(1).getStatus()).isEqualTo(SlotStatus.AVAILABLE); // 19:00-21:30 (cleanup
+                                                                                            // respected)
         assertThat(response.getSlots().get(0).getPriceCents()).isEqualTo(21000);
         assertThat(response.getSlots().get(1).getPriceCents()).isEqualTo(21000);
     }
@@ -188,9 +183,10 @@ class AvailabilityServiceTest {
         booking.setStatus(BookingStatus.CREATED);
         booking.setTotalPriceCents(2500);
 
-        when(bookingRepository.findByRoomIdAndBookingDateAndStatusIn(
-                eq(roomId), eq(mondayDate), eq(Arrays.asList(BookingStatus.CONFIRMED))))
-                .thenReturn(Collections.emptyList()); // No CONFIRMED bookings
+        when(bookingRepository.findActiveBookings(
+                eq(roomId), eq(mondayDate), eq(BookingStatus.CONFIRMED), eq(BookingStatus.DRAFT),
+                any(LocalDateTime.class)))
+                .thenReturn(Collections.emptyList()); // No blocking bookings
 
         // When
         var response = availabilityService.getAvailability(roomId, mondayDate);
